<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.programming.MainActivity">
        <item
            android:id="@+id/open_raffle"
            android:title="@string/open"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item
            android:id="@+id/close_raffle"
            android:title="@string/closed"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item
            android:id="@+id/completed_raffle"
            android:title="@string/completed"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item
            android:id="@+id/cancelled_raffle"
            android:title="@string/cancelled"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item
            android:id="@+id/customer_info"
            android:title="@string/customer_info"
            android:orderInCategory="1"
            app:showAsAction="never"
                />
        <item
            android:id="@+id/ticket_list"
            android:title="@string/ticket_list"
            android:orderInCategory="1"
            app:showAsAction="never"
                />
        <item
            android:id="@+id/winning"
            android:title="@string/winning"
            android:orderInCategory="1"
            app:showAsAction="never"
                />
</menu>