<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".winningActivity"
    android:paddingLeft="20dp">

    <EditText
        android:id="@+id/Search_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Search_name"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/winner_name"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_number"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/send"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/send"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/confirm_winner"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/confirm"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/winning_return"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/winning_return"
        android:textSize="15sp"/>

</LinearLayout>