<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewRaffleActivity"
    android:padding = "20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/raffle_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/raffle_name"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/description"
        android:textSize="20sp"/>


    <EditText
        android:id="@+id/raffle_number"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/raffle_number"
        android:textSize="30sp"
        android:gravity="center" />
    <RadioGroup
        android:id="@+id/rg_1"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Limited"
            android:button="@null"
            android:background="@drawable/select_color"
            android:checked="true"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Unlimited"
            android:textSize="18dp"
            android:background="@drawable/select_color"
            android:button="@null"
            android:gravity="center"
            android:layout_weight="1" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_price"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp" />
    <Button
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/image" />
    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/finish"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/cancel"
        android:textSize="20sp" />
</LinearLayout>
