<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerInfoActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/customer"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:id="@+id/customer_email"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginBottom="30dp" />
    <TextView
        android:id="@+id/customer_address"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/address"
        android:textSize="20sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:id="@+id/btn_change_customer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/change_info"/>
    <Button
        android:id="@+id/btn_cancel_customer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/cancel"/>


</LinearLayout>