<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ListActivity">

    <TextView
        android:id="@+id/customer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:inputType="text"
        android:text="@string/customer1"
        />

    <TextView
        android:id="@+id/customer2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/customer2" />

    <TextView
        android:id="@+id/customer3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/customer3" />

    <TextView
        android:id="@+id/customer4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/customer4" />
</LinearLayout>
