<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RaffleInfoActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/raffle_name2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/raffle_name"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        />
    <TextView
        android:id="@+id/description2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/description"
        android:textSize="20sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        />
    <TextView
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/customer"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:clickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Raffles status"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:clickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Tickets available,"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:clickable="true"/>
    <Button
        android:id="@+id/btn_change_info"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/change_info"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/cancel"/>


</LinearLayout>