<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image" />
        <Button
            android:id="@+id/cancelled_text1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/text1"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/text1"
            />
        <ImageView
            android:id="@+id/image2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image" />
        <Button
            android:id="@+id/cancelled_text2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/text2"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/text2" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image" />

        <Button
            android:id="@+id/cancelled_text3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/text3"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/text3" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image" />

        <Button
            android:id="@+id/cancelled_text4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/text4"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/text4"/>
    </LinearLayout>

</ScrollView>